--- a/notebooks/Task_3_Tensorflow.ipynb
+++ b/notebooks/Task_3_Tensorflow.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -825,13 +825,261 @@
        "((500, 75), (500, 12), (75, 1))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "VmData.shape, pECGData.shape, ActTime.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv1d (Conv1D)             (None, 500, 64)           256       \n",
+      "                                                                 \n",
+      " max_pooling1d (MaxPooling1D  (None, 500, 64)          0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv1d_1 (Conv1D)           (None, 500, 16)           1040      \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 500, 64)           1088      \n",
+      "                                                                 \n",
+      " conv1d_2 (Conv1D)           (None, 500, 16)           1040      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 500, 64)           1088      \n",
+      "                                                                 \n",
+      " conv1d_3 (Conv1D)           (None, 167, 16)           1040      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 167, 64)           1088      \n",
+      "                                                                 \n",
+      " conv1d_4 (Conv1D)           (None, 167, 16)           1040      \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 167, 64)           1088      \n",
+      "                                                                 \n",
+      " conv1d_5 (Conv1D)           (None, 167, 16)           1040      \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 167, 64)           1088      \n",
+      "                                                                 \n",
+      " conv1d_6 (Conv1D)           (None, 56, 16)            1040      \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 56, 64)            1088      \n",
+      "                                                                 \n",
+      " max_pooling1d_1 (MaxPooling  (None, 56, 64)           0         \n",
+      " 1D)                                                             \n",
+      "                                                                 \n",
+      " conv1d_7 (Conv1D)           (None, 56, 32)            2080      \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             (None, 56, 128)           4224      \n",
+      "                                                                 \n",
+      " conv1d_8 (Conv1D)           (None, 56, 32)            4128      \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 56, 128)           4224      \n",
+      "                                                                 \n",
+      " conv1d_9 (Conv1D)           (None, 19, 32)            4128      \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 19, 128)           4224      \n",
+      "                                                                 \n",
+      " conv1d_10 (Conv1D)          (None, 19, 32)            4128      \n",
+      "                                                                 \n",
+      " dense_9 (Dense)             (None, 19, 128)           4224      \n",
+      "                                                                 \n",
+      " conv1d_11 (Conv1D)          (None, 19, 32)            4128      \n",
+      "                                                                 \n",
+      " dense_10 (Dense)            (None, 19, 128)           4224      \n",
+      "                                                                 \n",
+      " conv1d_12 (Conv1D)          (None, 7, 32)             4128      \n",
+      "                                                                 \n",
+      " dense_11 (Dense)            (None, 7, 128)            4224      \n",
+      "                                                                 \n",
+      " max_pooling1d_2 (MaxPooling  (None, 7, 128)           0         \n",
+      " 1D)                                                             \n",
+      "                                                                 \n",
+      " conv1d_13 (Conv1D)          (None, 7, 48)             6192      \n",
+      "                                                                 \n",
+      " dense_12 (Dense)            (None, 7, 192)            9408      \n",
+      "                                                                 \n",
+      " conv1d_14 (Conv1D)          (None, 7, 48)             9264      \n",
+      "                                                                 \n",
+      " dense_13 (Dense)            (None, 7, 192)            9408      \n",
+      "                                                                 \n",
+      " conv1d_15 (Conv1D)          (None, 3, 48)             9264      \n",
+      "                                                                 \n",
+      " dense_14 (Dense)            (None, 3, 192)            9408      \n",
+      "                                                                 \n",
+      " conv1d_16 (Conv1D)          (None, 3, 48)             9264      \n",
+      "                                                                 \n",
+      " dense_15 (Dense)            (None, 3, 192)            9408      \n",
+      "                                                                 \n",
+      " conv1d_17 (Conv1D)          (None, 3, 48)             9264      \n",
+      "                                                                 \n",
+      " dense_16 (Dense)            (None, 3, 192)            9408      \n",
+      "                                                                 \n",
+      " conv1d_18 (Conv1D)          (None, 1, 48)             9264      \n",
+      "                                                                 \n",
+      " dense_17 (Dense)            (None, 1, 192)            9408      \n",
+      "                                                                 \n",
+      " conv1d_19 (Conv1D)          (None, 1, 64)             12352     \n",
+      "                                                                 \n",
+      " dense_18 (Dense)            (None, 1, 256)            16640     \n",
+      "                                                                 \n",
+      " conv1d_20 (Conv1D)          (None, 1, 64)             16448     \n",
+      "                                                                 \n",
+      " dense_19 (Dense)            (None, 1, 256)            16640     \n",
+      "                                                                 \n",
+      " conv1d_21 (Conv1D)          (None, 1, 64)             16448     \n",
+      "                                                                 \n",
+      " dense_20 (Dense)            (None, 1, 256)            16640     \n",
+      "                                                                 \n",
+      " conv1d_22 (Conv1D)          (None, 1, 64)             16448     \n",
+      "                                                                 \n",
+      " dense_21 (Dense)            (None, 1, 256)            16640     \n",
+      "                                                                 \n",
+      " conv1d_23 (Conv1D)          (None, 1, 64)             16448     \n",
+      "                                                                 \n",
+      " dense_22 (Dense)            (None, 1, 256)            16640     \n",
+      "                                                                 \n",
+      " conv1d_24 (Conv1D)          (None, 1, 64)             16448     \n",
+      "                                                                 \n",
+      " dense_23 (Dense)            (None, 1, 256)            16640     \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 1, 256)            0         \n",
+      "                                                                 \n",
+      " conv1d_25 (Conv1D)          (None, 1, 75)             19275     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 383,755\n",
+      "Trainable params: 383,755\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "def network_model(input_shape, time_steps, features ):\n",
+    "    # Define the model architecture\n",
+    "    model = tf.keras.Sequential([\n",
+    "        tf.keras.layers.Input(shape=input_shape),\n",
+    "        tf.keras.layers.Conv1D(filters=64, kernel_size=3, strides=1, padding='same'),\n",
+    "        tf.keras.layers.MaxPooling1D(pool_size=3, strides=1, padding='same'),\n",
+    "        \n",
+    "        # Fire Module 1\n",
+    "        tf.keras.layers.Conv1D(filters=16, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(64, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=16, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(64, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=16, kernel_size=1, strides=3, padding='same'),\n",
+    "        tf.keras.layers.Dense(64, activation='relu'),\n",
+    "        \n",
+    "        # Fire Module 2\n",
+    "        tf.keras.layers.Conv1D(filters=16, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(64, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=16, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(64, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=16, kernel_size=1, strides=3, padding='same'),\n",
+    "        tf.keras.layers.Dense(64, activation='relu'),\n",
+    "        \n",
+    "        # Layer 2\n",
+    "        tf.keras.layers.MaxPooling1D(pool_size=3, strides=1, padding='same'),\n",
+    "        \n",
+    "        # Fire Module 3\n",
+    "        tf.keras.layers.Conv1D(filters=32, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=32, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=32, kernel_size=1, strides=3, padding='same'),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        \n",
+    "        # Fire Module 4\n",
+    "        tf.keras.layers.Conv1D(filters=32, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=32, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=32, kernel_size=1, strides=3, padding='same'),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        \n",
+    "        # Layer 3\n",
+    "        tf.keras.layers.MaxPooling1D(pool_size=3, strides=1, padding='same'),\n",
+    "        \n",
+    "        # Fire Module 5\n",
+    "        tf.keras.layers.Conv1D(filters=48, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(192, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=48, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(192, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=48, kernel_size=1, strides=3, padding='same'),\n",
+    "        tf.keras.layers.Dense(192, activation='relu'),\n",
+    "        \n",
+    "        # Fire Module 6\n",
+    "        tf.keras.layers.Conv1D(filters=48, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(192, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=48, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(192, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=48, kernel_size=1, strides=3, padding='same'),\n",
+    "        tf.keras.layers.Dense(192, activation='relu'),\n",
+    "        \n",
+    "        # Fire Module 7\n",
+    "        tf.keras.layers.Conv1D(filters=64, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(256, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=64, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(256, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=64, kernel_size=1, strides=3, padding='same'),\n",
+    "        tf.keras.layers.Dense(256, activation='relu'),\n",
+    "        \n",
+    "        # Fire Module 8\n",
+    "        tf.keras.layers.Conv1D(filters=64, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(256, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=64, kernel_size=1, strides=1, padding='same'),\n",
+    "        tf.keras.layers.Dense(256, activation='relu'),\n",
+    "        \n",
+    "        tf.keras.layers.Conv1D(filters=64, kernel_size=1, strides=3, padding='same'),\n",
+    "        tf.keras.layers.Dense(256, activation='relu'),\n",
+    "        \n",
+    "        # Last Layer\n",
+    "        tf.keras.layers.Dropout(0.1),\n",
+    "        tf.keras.layers.Conv1D(filters=75, kernel_size=1, padding='valid'),\n",
+    "    ])\n",
+    "\n",
+    "    # Compile the model\n",
+    "    model.compile(\n",
+    "        loss=tf.keras.losses.MeanSquaredError(),\n",
+    "        optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "time_steps = 500\n",
+    "features = 1\n",
+    "input_shape = (time_steps, features)\n",
+    "\n",
+    "model = network_model(input_shape, time_steps, features)\n",
+    "model.summary()"
    ]
   },
   {
