--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "# Torch Tensor data !\n",
     "path = './Datasets/intracardiac_dataset/'\n",
-    "VmTrainData, pECGTrainData, VmDataTest, pECGTestData  = fileReader(path, 1000)\n",
+    "VmTrainData, pECGTrainData, VmDataTest, pECGTestData  = fileReader(path, 100)\n",
     "print('Data loading from files - complete')\n",
     "\n",
     "VmTrainData = (VmTrainData - torch.min(VmTrainData))/(torch.max(VmTrainData) - torch.min(VmTrainData))\n",
@@ -56,20 +56,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dim_val = 512\n",
-    "n_heads = 8\n",
-    "n_decoder_layers = 4\n",
-    "n_encoder_layers = 4\n",
+    "dim_val = 320\n",
+    "n_heads = 32\n",
+    "n_decoder_layers = 2\n",
+    "n_encoder_layers = 2\n",
     "input_size = 12\n",
     "dec_seq_len = 498\n",
     "enc_seq_len = 500\n",
-    "output_sequence_length = 50\n",
+    "output_sequence_length = 75\n",
     "max_seq_len = enc_seq_len\n",
-    "train_batch_size = 16\n",
+    "train_batch_size = 8\n",
     "test_batch_size = 10\n",
     "batch_first= False\n",
     "output_size = 75\n",
-    "window_size = 50"
+    "window_size = 75"
    ]
   },
   {
@@ -139,12 +139,12 @@
     "# model = torch.nn.DataParallel(model)\n",
     "\n",
     "# Define the MSE loss\n",
-    "criterion = torch.nn.MSELoss()\n",
+    "criterion = torch.nn.HuberLoss(delta=5.0)\n",
     "\n",
     "# Define the optimizer\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 1e-3)\n",
     "\n",
-    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=2000, gamma=0.1)"
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5000, gamma=0.1)"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS= 10000\n",
+    "EPOCHS= 40000\n",
     "train_losses = []\n",
     "src_mask = generate_square_subsequent_mask(\n",
     "                dim1=output_sequence_length,\n",
@@ -166,7 +166,6 @@
     "\n",
     "pbar = tqdm(range(EPOCHS), desc='Training')\n",
     "for epoch in pbar:\n",
-    "\n",
     "    for src, trg, trg_y in TrainData:\n",
     "        optimizer.zero_grad()\n",
     "        prediction = model(\n",
@@ -178,13 +177,16 @@
     "        \n",
     "        \n",
     "        loss = criterion(prediction.view_as(trg).to(device), trg_y.to(device))\n",
-    "        \n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        # scheduler.step()\n",
+    "        \n",
     "    \n",
     "    pbar.set_description('Training   Loss: '+str(loss.item()))\n",
     "    train_losses.append(loss.item())\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "        "
    ]
   },
@@ -195,7 +197,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "model.train = False\n",
+    "model.train = True\n",
     "with torch.no_grad():\n",
     "    src, trg, trg_y = next(iter(TestData))\n",
     "    prediction = model(\n",
@@ -204,13 +206,13 @@
     "            src_mask=src_mask,\n",
     "            tgt_mask=tgt_mask\n",
     "        )\n",
-    "    \n",
+    "     \n",
     "    \n",
     "    pyplot.plot(prediction.view_as(trg_y).reshape(-1,trg_y.shape[1]*trg_y.shape[2] , 75).detach().cpu()[0,:,0])\n",
     "    pyplot.plot(trg_y.reshape(-1, trg_y.shape[1]*trg_y.shape[2], 75).detach().cpu()[0,:,0])\n",
     "    if not os.path.isdir('graphs'):\n",
     "        os.mkdir('graphs')\n",
-    "    pyplot.savefig('./graphs/model_'+str(dim_val) +'_'+ str(n_encoder_layers)+'_'+str(n_decoder_layers)+'_'+str(epoch)+'.png')"
+    "    # pyplot.savefig('./graphs/model_'+str(dim_val) +'_encoder_'+ str(n_encoder_layers)+'_decoder_'+str(n_decoder_layers)+'_epochs_'+str(epoch)+'_window_size_'+str(window_size)+'.png')"
    ]
   },
   {
@@ -235,7 +237,7 @@
     "PARENT_PATH = 'model_weights'\n",
     "if not os.path.isdir(PARENT_PATH):\n",
     "    os.mkdir(PARENT_PATH)\n",
-    "PATH = './model_weights/model_'+str(dim_val) +'_'+ str(n_encoder_layers)+'_'+str(n_decoder_layers)+'_'+str(EPOCHS)+'.pth'\n",
+    "PATH = './model_weights/model_'+str(dim_val) +'_encoder_'+ str(n_encoder_layers)+'_decoder_'+str(n_decoder_layers)+'_epochs_'+str(EPOCHS)+'.pth'\n",
     "torch.save(model.state_dict(), PATH)"
    ]
   },
@@ -263,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.11 (main, Apr 20 2023, 19:02:41) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
